--- a/autres/makefile
+++ b/autres/makefile
@@ -1,4 +1,5 @@
-main:main.c fantome.o joueur.o plateau.o affichage.o
+main:../sources/main.c ../sources/plateau.o ../sources/affichage.o ../sources/joueur.o 
+	gcc $^ -o $@
 	gcc $^ -o $@
 *.o:*.c
 	gcc -c $^ -o $@
