placer jou et fants

--- a/autres/makefile
+++ b/autres/makefile
@@ -1,4 +1,4 @@
-main:../sources/main.c ../sources/plateau.o ../sources/affichage.o ../sources/joueur.o 
+main:../sources/main.c ../sources/plateau.o ../sources/affichage.o ../sources/joueur.o ../sources/fantome.o
 	gcc $^ -o $@
 	gcc $^ -o $@
 *.o:*.c
